--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.10",
+    "@meshsdk/core": "1.3.0",
+    "@meshsdk/react": "1.1.3",
     "sass": "^1.49.7"
   },
   "repository": {
@@ -36,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  
 }
