--- a/package.json
+++ b/package.json
@@ -43,3 +43,57 @@
   }
   
 }
+
+
+
+
+{
+  "name": "cardano-minting",
+  "description": "A Mesh minting template",
+  "version": "0.1.0",
+  "private": true,
+  "author": "MeshJS",
+  "license": "Apache-2.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.10",
+    "@meshsdk/core": "1.3.0",
+    "@meshsdk/react": "1.1.3",
+    "copy-to-clipboard": "^3.3.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.10",
+    "i": "^0.3.7",
+    "next": "12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-highlight": "^0.14.0",
+    "react-scroll": "^1.8.7",
+    "classnames": "^2.2.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "eslint-config-next": "12.1.6",
+    "flowbite-typography": "^1.0.2",
+    "postcss": "8.4.5",
+    "tailwindcss": "3.1.6"
+  },
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/cruip/open-react-template.git"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  }
+}
