--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.14.0",
-    "react-scroll": "^1.8.7",
-    "classnames": "^2.2.6"
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
@@ -33,18 +32,5 @@
     "flowbite-typography": "^1.0.2",
     "postcss": "8.4.5",
     "tailwindcss": "3.1.6"
-  },
-    "repository": {
-    "type": "git",
-    "url": "https://github.com/cruip/open-react-template.git"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
